add lorem ipsum

--- a/src/views/header.hbs
+++ b/src/views/header.hbs
@@ -1,12 +1,8 @@
 <div id="headNav"></div>
 <!--<div class="banner">-->
   <!--<div class="logo">-->
-    <!--&lt;!&ndash;<img alt="SBC Tech Partners" class="headerLogo" src="./images/sbc_header.png">&ndash;&gt;-->
+    <!--&lt;!&ndash;<img alt="web-boilerplate" class="headerLogo" src="./images/header.png">&ndash;&gt;-->
   <!--</div>-->
   <!--<div class="bonafides">-->
-    <!--<img src="./images/secaf_logo.jpg" class="embed" style="width:180px;">-->
-    <!--<img src="./images/swam_header.jpg" class="embed">-->
-    <!--<img src="./images/vosb_header.jpg" class="embed" style="height:80px;border:1px ridge gray;">-->
-    <!--<img src="./images/HP%20banner.jpg" class="embed" style="height:80px">-->
   <!--</div>-->
 <!--</div>-->
