--- a/src/views/nav.hbs
+++ b/src/views/nav.hbs
@@ -1,4 +1,4 @@
-<nav class="nav navbar navbar-sbc">
+<nav class="nav navbar navbar-web">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" style="" href="#/home"><img alt="SBC Tech Partners" src="./images/sbc_logo.png"></a>
+      <a class="navbar-brand" style="" href="#/home"><img alt="web-boilerplate" src="./images/brand.png"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
