--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,29 +1,19 @@
-<h2 class="title">Welcome to SBC Tech Partners</h2>
+<h2 class="title">Welcome to web-boilerplate</h2>
 <article>
   <section>
-    <p>SBC Tech Partners Inc. is a CVE certified Veteran Owned Small Business (VOSB) started specifically to provide our customers with services and solutions from a company with strong core values and work ethics that reflect integrity, accountability and respect. We pride ourselves as a professional services firm providing specialized information technology and management consulting solutions while providing our customers the best possible service and Value Added Resale of some of the most trusted names in Information Technology.</p>
-    <img src="./images/secaf_logo.jpg" class="embed" style="width:180px;">
-    <img src="./images/swam_header.jpg" class="embed">
-    <img src="./images/vosb_header.jpg" class="embed" style="height:80px;border:1px ridge gray;">
-    <img src="./images/HP%20banner.jpg" class="embed" style="height:80px">
-    <h2>Our Capabilities</h2>
-    <p>SBC Tech Partners was born out of a vision to provide customers with customized and comprehensive technology solutions. Rather than need to look for multiple vendors to accomplish your goals, one scope of work can be seamlessly initiated, planned, and executed. Our clients are encouraged to imagine that anything is possible.</p>
+    <p>Lorem ipsum dolor sit amet, no animal interpretaris pri. Facer tibique platonem per et. Ei vix ubique maiorum, eum at vero solum suscipit. Omnis mundi assueverit mea id, et alia definiebas liberavisse nec.</p>
+    <h2>Usu illum inimicus te</h2>
+    <p>Has mutat nusquam persecuti in, sed sale oportere cotidieque ex. Doctus deleniti philosophia ea cum. Eum at alienum salutatus vituperata, id tempor persecuti voluptatibus est. Sea ea ullum petentium, vitae soleat quaerendum cu quo, vel ea corrumpit deseruisse. Sit ad altera detraxit, veri magna falli mea at.</p>
 
     <ul style="list-style-type: none;">
-      <li><b>Enterprise Level Infrastructure</b><br/>
-          Todays systems demand more bandwidth, faster connections, higher availability, and serve a geographically dispersed workforce. We provide advanced and basic networking products and services that enable our customers to capitalize on technology investments by building proven network infrastructures that can handle ever-increasing traffic loads and user demands.<br/></li>
-      <li><b>Enterprise Level Security</b><br/>
-          Offering a wide range of both information and physical security products and services to customers - both small and large. These solutions protect data and critical internal assets while safeguarding users, customers, and partners from malicious attacks.<br> &nbsp; </li>
-      <li><b>Storage Management</b><br/>
-          We provide enterprise data storage and management solutions that range from simple file sharing solutions to more complex Storage Attached Network (SAN) deployments. With product offerings in capacity expansion, file-sharing, network attached storage (NAS), direct-attached storage (DAS), disk storage, SAN and SAN management and tape backup solutions we can tailor any solution to your needs.<br/></li>
-      <li><b>Virtualization and Cloud Computing</b><br/>
-          Virtualization technologies increase manageability, security, and flexibility in IT environments. So if it’s a migration to Microsoft Office365, server virtualization, desktop virtualization, or storage virtualization you are seeking we have the expertise to enable customers to maximize system utilization by consolidating multiple environments into a single server, computer, or storage sub-system.<br/></li>
-      <li><b>Software Development</b><br/>
-          For customers looking for a customized development solution for web and desktop, mobile applications, or E-Learning we have experts who can help make your vision a reality.<br/></li>
-      <li><b>IT Support and Administration</b><br/>
-          Using proven IT management techniques we can make your Service Desk and Systems Administration processes and procedures more efficient, which reduces resolution time for minor issues and creates a better user experience while keeping costs in line.
-      </li>
+      <li><b>Sit te modus equidem vulputate</b><br/>
+        <p>Has mutat nusquam persecuti in, sed sale oportere cotidieque ex. Doctus deleniti philosophia ea cum. Eum at alienum salutatus vituperata, id tempor persecuti voluptatibus est. Sea ea ullum petentium, vitae soleat quaerendum cu quo, vel ea corrumpit deseruisse. Sit ad altera detraxit, veri magna falli mea at.</p>
+          <br/></li>
+      <li><b>An menandri mediocrem vi</b><br/>
+          Ex purto graecis instructior eam, te brute ponderum volutpat usu, vidisse ceteros eos cu. Te posse legimus delicatissimi cum, mel simul principes ea. Eos in epicurei pertinax. Vix tritani evertitur et.<br> &nbsp; </li>
+      <li><b>Patrioque omittantur signiferumque cu si</b><br/>
+          Debitis forensibus delicatissimi no sea, nibh legimus alienum cum id. His ut mundi noster gloriatur, congue praesent ea mel. Et nominavi petentium honestatis qui, et unum primis mea. Ei mel diceret mediocritatem, vix laoreet moderatius ut, eum brute quodsi apeirian id. Vel ex minim fabulas suavitate, duo in propriae oportere dissentiet, te porro euismod eos.<br/></li>
     </ul>
   </section>
-  <aside>{{> naics }}</aside>
+  <aside>{{> widget-example }}</aside>
 </article>
