--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -3,16 +3,24 @@
 --------------------------------*/
 #headNav {
   margin-top:10px;
+  
+  .container-fluid {
+    padding-left:10px;
+  }
+  
+  .navbar-nav {
+    height: 50px;
+  }
 
   .navbar-web {
-    height: 45px;
+    height: 50px;
     overflow: hidden;
     display: block;
     font-family: 'Varela Round', sans-serif !important;
     font-size: 18px;
     letter-spacing: 0.01em;
     border-left: 1px solid #c2c1c1;
-    margin-top: 5px;
+    // margin-top: 5px;
     background: #91B3F8;
     /* old browsers */
     background: -moz-linear-gradient(top, #91b3f8 0px, #5885e1 20px, #4e7bd6 20px, #2c5ab6 30px);
@@ -28,22 +36,23 @@
   }
 
   .navbar-header {
-    height:40px;
     margin-right:0;
     margin-left:0;
-    background:white;
+    // background:white;
     border:0;
   }
   .navbar-brand {
-    height:40px;
+    height:45px;
     padding: 0;
-    margin-top: 3px;
-    background: white;
+    margin: 0;
+    // margin-top: 3px;
+    // background: white;
     border: 0;
     img {
-      padding-left: 3px;
-      padding-right: 3px;
-      height: 40px;
+      align-content: center;
+      padding-top: 2px;
+      padding-right: 2px;
+      height: 45px;
     }
   }
 
@@ -52,6 +61,7 @@
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-top: 3px;
     /* active tab */
     /* inactive tab */
     /* inactive tab hover */
