--- a/src/views/nav.hbs
+++ b/src/views/nav.hbs
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" style="" href="#/home"><img alt="web-boilerplate" src="./images/brand.png"></a>
+      <a class="navbar-brand navbar-nav" style="" href="#/home"><img alt="web-boilerplate" src="./images/brand.png"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
